2006-06-23  Ross Burton  <ross@openedhand.com>

	* configure.ac:
	* Makefile.am:
	Remove references to bindings/, it's moved.

2006-06-23  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-group.c
	(clutter_group_get_children): Mention that you must free
	the returned list otherwise you'll leak stuff all around.

2006-06-23  Ross Burton  <ross@openedhand.com>

	* examples/super-oh.c:
	Fix build with trails enabled. Still crashes.

2006-06-23  Ross Burton  <ross@openedhand.com>

	* configure.ac:
	Disable static libraries.

2006-06-22  Matthew Allum  <mallum@openedhand.com>

	* web/index.html:
	Make OpeneHand link

2006-06-22  Matthew Allum  <mallum@openedhand.com>

	* web/index.html:
	Add Pango ref, authors info.

========== 2006-06-22 0.1 Release =====================

2006-06-22  Matthew Allum  <mallum@openedhand.com>

	* configure.ac:
	* web/index.html:
	Correct Bugzilla link. Add debs link
        Bump up version to 0.1 !

2006-06-22  Matthew Allum  <mallum@openedhand.com>

	* NEWS:
	Add an entry for 0.1 release
	* web/index.html:
	* web/style.css:
	Add basic website. 

2006-06-22  Iain Holmes  <iain@openedhand.com>

	* clutter/clutter-main.c: Guess what...more docs

2006-06-22  Iain Holmes  <iain@openedhand.com>

	* clutter/clutter-event.c: Add docs

2006-06-22  Iain Holmes  <iain@openedhand.com>

	* clutter/clutter-media.c: Add docs

2006-06-22  Iain Holmes  <iain@openedhand.com>

	* clutter/clutter-texture.c: Fix typos.

	* clutter/clutter-timeline.c: Fix typos.

2006-06-22  Iain Holmes  <iain@openedhand.com>

	* clutter/clutter-video-texture.c: Docs.

2006-06-22  Iain Holmes  <iain@openedhand.com>

	* clutter/clutter-group.c: More typo fixes

	* clutter/clutter-event.c: Documentation

2006-06-22  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-timeline.h:
	* clutter/clutter-timeline.c: Add a "started" and a "paused"
	signals; add more sanity checks on the public functions.
	
	(clutter_timeline_get_loop): Add a getter function for the