@@ -54,73 +54,64 @@ G_BEGIN_DECLS
   (G_TYPE_INSTANCE_GET_CLASS ((obj), \
   CLUTTER_TYPE_TEXTURE, ClutterTextureClass))
 
-typedef struct ClutterTexturePrivate ClutterTexturePrivate ;
 typedef struct _ClutterTexture      ClutterTexture;
 typedef struct _ClutterTextureClass ClutterTextureClass;
+typedef struct ClutterTexturePrivate ClutterTexturePrivate;
 
 struct _ClutterTexture
 {
   ClutterActor         parent;
 
   ClutterTexturePrivate *priv;
-}; 
+};
 
-struct _ClutterTextureClass 
+struct _ClutterTextureClass
 {
   ClutterActorClass parent_class;
 
-  void (*size_change) (ClutterTexture *texture, gint width, gint height);
-  void (*pixbuf_change) (ClutterTexture *texture );
-}; 
+  void (*size_change) (ClutterTexture *texture, 
+		       gint width, 
+		       gint height);
+  void (*pixbuf_change) (ClutterTexture *texture);
+};
 
 GType clutter_texture_get_type (void);
 
-ClutterActor*
-clutter_texture_new_from_pixbuf (GdkPixbuf *pixbuf);
+ClutterActor *clutter_texture_new_from_pixbuf (GdkPixbuf *pixbuf);
 
-ClutterActor*
-clutter_texture_new (void);
+ClutterActor *clutter_texture_new (void);
 
-void
-clutter_texture_set_pixbuf (ClutterTexture *texture, GdkPixbuf *pixbuf);
+void clutter_texture_set_pixbuf (ClutterTexture *texture, GdkPixbuf *pixbuf);
 
-GdkPixbuf*
-clutter_texture_get_pixbuf (ClutterTexture* texture);
+GdkPixbuf *clutter_texture_get_pixbuf (ClutterTexture* texture);
 
-void
-clutter_texture_get_base_size (ClutterTexture *texture, 
+voidclutter_texture_get_base_size (ClutterTexture *texture, 
 			       gint           *width,
 			       gint           *height);
 
 /* Below mainly for subclassed texture based actors */
 
-void
-clutter_texture_bind_tile (ClutterTexture *texture, gint index);
+void clutter_texture_bind_tile (ClutterTexture *texture, gint index);
 
-void
-clutter_texture_get_n_tiles (ClutterTexture *texture, 
+void clutter_texture_get_n_tiles (ClutterTexture *texture, 
 			     gint           *n_x_tiles,
 			     gint           *n_y_tiles);
 
-void
-clutter_texture_get_x_tile_detail (ClutterTexture *texture, 
+void clutter_texture_get_x_tile_detail (ClutterTexture *texture, 
 				   gint            x_index,
 				   gint           *pos,
 				   gint           *size,
 				   gint           *waste);
 
-void
-clutter_texture_get_y_tile_detail (ClutterTexture *texture, 
+void clutter_texture_get_y_tile_detail (ClutterTexture *texture, 
 				   gint            y_index,
 				   gint           *pos,
 				   gint           *size,
 				   gint           *waste);
 
-gboolean
-clutter_texture_has_generated_tiles (ClutterTexture *texture);
+gboolean clutter_texture_has_generated_tiles (ClutterTexture *texture);
 
-gboolean
-clutter_texture_is_tiled (ClutterTexture *texture);
+gboolean clutter_texture_is_tiled (ClutterTexture *texture);
 
 G_END_DECLS
 
